2011-05-21  James Youngman  <jay@gnu.org>

	Set TZ=GMT in the y2k tests.
	* tests/year-2000/ext.sh: Set $TZ to GMT in order to make it
	possible for implementations which convert SCCS file dates to
	time_t values (but which otherwise have no bugs) to pass the
	tests.
	* tests/year-2000/prs-y2k.sh: Likewise.

	Remove spurious space in definition of admin.
	* tests/common/command-names (admin): remove spurious space.

	Move on from release 1.3.1.
	* configure.ac: Update version number to 1.3.2-git, to indicate
	that compiled versions of this code are no longer identical to the
	1.3.1 release.
	* NEWS: Likewise.

2011-05-10  James Youngman  <jay@gnu.org>

	Release version 1.3.1.
	* NEWS: Update version number to 1.3.1.
	* configure.ac: Likewise.

	Check we distributed all the tests.  Remove redundant Makefile.am files.
	* auxfiles/check-testfiles.sh: New script (copied from GNU
	findutils e66802375963941b3b54a0e038d18eccde449e14 with some
	adaptations for CSSC) for checking that we installed all the test
	scripts in "make dist".
	* tests/Makefile.am (dist-hook): Invoke the
	auxfiles/check-testfiles.sh script.
	* tests/common/Makefile.am: remove unreferenced file;
	tests/Makefile.am does not recurse.
	* tests/delta/Makefile.am, tests/prs/Makefile.am: Likewise.
	* tests/prt/Makefile.am, tests/sact/Makefile.am: Likewise.
	* tests/admin/Makefile.am, tests/unget/Makefile.am: Likewise.
	* tests/val/Makefile.am, tests/what/Makefile.am: Likewise.

2011-05-03  James Youngman  <jay@gnu.org>

	Modify "prs -d :DI:" to print ignored deltas.
	* tests/prs/delta_ixg.sh: New test script for "prs -d :DI:".
	* tests/prs/s.delta_ixg: New test input file for delta_ixg.sh.
	* src/sf-prs.cc (print_delta): For :DI:, also print ignored
	deltas.  Follow the conventions of OpenSolaris 2009.06 on the
	question of how many slashes to produce.
	* docs/cssc.texi (Data Keywords): Describe in more detail just how
	the keyword :DI: is expanded.